Sans jniLibs, code for loading geniussdk and displaying janky frame estimated gpu %

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,11 @@ android {
         disable 'MissingTranslation'
         disable 'UnsafeOptInUsageError'
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['src/main/jniLibs']
+        }
+    }
 }
 
 dependencies {
